Correction Safari

--- a/Style/style.scss
+++ b/Style/style.scss
@@ -193,13 +193,14 @@ section {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        position: relative;
         &::after {
           content: "";
           width: 60%;
           border-bottom: solid 1.5px white;
           position: absolute;
           left: 4%;
-          top: 11%;
+          top: 100%;
           z-index: 1;
           border-radius: 10px;
           @include mobile {
@@ -239,13 +240,14 @@ section {
         font-size: 1.6em;
         color: white;
         margin-top: 60px;
+        position: relative;
         &::after {
           content: "";
           width: 30%;
           border-bottom: solid 1.5px white;
           position: absolute;
           left: 35%;
-          top: 30%;
+          top: 150%;
           z-index: 1;
           border-radius: 10px;
           @include mobile {
@@ -277,13 +279,14 @@ section {
       }
       .weather-forecast {
         margin-top: 20px;
+        position: relative;
         &::before {
           content: "";
           width: 70%;
           border-bottom: solid 1.5px white;
           position: absolute;
           left: 15%;
-          top: 80%;
+          top: -3.5%;
           z-index: 1;
           border-radius: 10px;
           @include mobile {
